--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
   "rules": {
     "camelcase": "off",
     "jsx-a11y/no-static-element-interactions": 0,
+    "react/destructuring-assignment": 0,
     "import/no-unresolved": "error",
     "@typescript-eslint/naming-convention": [
       "error",
